fix bug in stretching of images.

--- a/css/item_details.css
+++ b/css/item_details.css
@@ -1,24 +1,26 @@
 body {
     font-family: Arial, sans-serif;
-  }
-  p{
+}
+
+p {
     font-size: large;
-  }
-  
-  .flex-container {
+}
+
+.flex-container {
     display: flex;
-  }
-  .image-buttons {
+}
+
+.image-buttons {
     position: absolute;
     top: 50%;
     left: 10px;
     transform: translateY(-50%);
     display: flex;
-  }
-  
-  .image-buttons button {
+}
+
+.image-buttons button {
     border: none;
-    background-color:  #4caf50;
+    background-color: #4caf50;
     color: #444;
     font-size: 36px;
     width: 40px;
@@ -26,57 +28,58 @@ body {
     cursor: pointer;
     border-radius: 5px;
     padding: 2%;
-  }
-  #image-button1{
-      text-align: left;
-  }
-  #image-button2{
+}
+
+#image-button1 {
+    text-align: left;
+}
+
+#image-button2 {
     position: absolute;
     left: 38vw;
     margin: auto;
 }
-  
-  .image-buttons button:hover {
+
+.image-buttons button:hover {
     background-color: white;
-  }  
-  
-  .item-image {
+}
+
+.item-image {
     width: 40vw;
     height: 40vw;
-    border-width: 3px;
     border: 1px solid black;
     padding: 2%;
     border-radius: 10px;
-  }
-  
-  .item-details {
+    object-fit: cover;
+}
+
+.item-details {
     margin-left: 2vw;
-    border-width: 3px;
     border: 1px solid black;
     padding: 2%;
     border-radius: 10px;
-  }
-  
-  .item-name {
+}
+
+.item-name {
     font-size: 36px;
     font-weight: bold;
-  }
-  
-  .item-description {
+}
+
+.item-description {
     font-size: 18px;
     line-height: 1.5;
     margin-bottom: 10px;
-  }
-  
-  .item-options {
-    margin-bottom: 20px;
-  }
+}
 
-  .option-button {
+.item-options {
+    margin-bottom: 20px;
+}
+
+.option-button {
     display: none; /* Hide the radio buttons */
-  }
-  
-  .option-label {
+}
+
+.option-label {
     display: inline-block;
     background-color: #f1f1f1;
     color: #444;
@@ -87,66 +90,66 @@ body {
     cursor: pointer;
     margin-right: 10px;
     margin-bottom: 10px;
-  }
-  
-  .option-label:hover {
+}
+
+.option-label:hover {
     background-color: #ddd;
-  }
-  
-  .option-button:checked + .option-label {
+}
+
+.option-button:checked + .option-label {
     background-color: #4caf50;
     color: white;
-  
-  }
-  
-  
-  .item-price {
+
+}
+
+
+.item-price {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 20px;
-  }
-  
-  .quantity {
+}
+
+.quantity {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
     font-size: large;
-  }
-  
-  .quantity label {
+}
+
+.quantity label {
     margin-right: 10px;
-  }
-  
-  .quantity input[type="text"] {
+}
+
+.quantity input[type="text"] {
     width: 50px;
-    height: 38px; 
+    height: 38px;
     text-align: center;
     border: 1px solid #ccc;
     border-radius: 4px;
     padding: 5px;
-  }
-  
-  .quantity button {
-    height: 38px; 
-    width: 35px; 
+}
+
+.quantity button {
+    height: 38px;
+    width: 35px;
     border: none;
     background-color: #9af79e;
     color: #444;
     font-size: 18px;
     cursor: pointer;
-  }
-  .item-qty-left{
+}
+
+.item-qty-left {
     margin-left: 10vw;
-  }
+}
 
-    
 
-  .cart-buttons {
+.cart-buttons {
     display: flex;
     justify-content: space-between;
-    }
+}
 
-  .cart-buttons_button {
+.cart-buttons_button {
     width: 45%;
     background-color: #4caf50;
     color: white;
@@ -155,10 +158,11 @@ body {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    }
-    #qtyError{
-      color: red;
-    } 
+}
+
+#qtyError {
+    color: red;
+}
 
    
   
